--- a/index.css
+++ b/index.css
@@ -1,108 +1,18 @@
 /*======= Font rengini #3C373B yapan bir yeni bir universal selector yaratın*/
 *{
-  margin: 0;
-  padding: 0;
-  
+  color:#3C373B;
 }
 body{
-  background-image: url(arkaplan.jpg);
+  background-image: url(/arkaplan.jpg);
 }
-
-nav ul li{
-  list-style-type: none;
-  display: inline-block;
-  padding: 15px;
-}
-
-nav ul li a{
-  margin: 0 10px;
-    border: 1px solid lightgray;
-    padding: 10px;
-    display: inline-block;
-    border-radius: 10px;
-    color: white;
-    text-decoration: none;
-    margin-bottom: 20px;
-    background-color: #E79947;
-}
-nav ul{
-  text-align: center;
-}
-nav ul li a:hover{
-  background-color: white;
-  color: aqua;
-}
-
-div {
- text-align: center;
-  background-color: antiquewhite;
-  padding: 0 10px;
-  background-size: 300px 300px;
-}
-.yemekler {
-  width: 900px;
-  margin: auto;
-  float: left;
-    padding: 0 10px 10px 0;
-    
-}
-
-
-.Aperatifler {
-  width: 900px;
-  margin: auto;
-  float: right;
-    padding: 0 10px 10px 0;
-    background-color: blueviolet;
-    
-}
-
-.Tatlılar {
-  width: 900px;
-  margin: auto;
-  float: left;
-  padding: 0 10px 10px 0;
- 
-}
-
-#hakkımızda{
-  font-size: 16px;
-    font-family: roboto;
-    padding: 10px;
-    line-height: 1.4;
-    background-color: darkseagreen;
-    text-align: center;
-    font-style: italic;
-   
-
-}
-
-
-
-
-
 
 h1 {
   font-family: 'Gaegu', cursive;
   margin: 20px 0;
-  font-size: 40px;
+  /*=======  Font size'ı 60px yapın ve text'i ortalayın(center) */
+  font-size: 60px;
   text-align: center;
 }
-  
-.iletişim {
-    border-top: 1px dashed black;
-    padding: 20px 0;
-    text-align: unset;
-    background-color: rgb(84, 186, 207);
-    color: crimson;
-    float: right;
-    margin-bottom: 30px;
-    
-    
-  }
-
-  /*=======  Font size'ı 60px yapın ve text'i ortalayın(center) */
-  
 
 h2, h3, h4, h5, h6 {
   font-family: 'Gaegu', cursive;
@@ -111,11 +21,21 @@ h2, h3, h4, h5, h6 {
   /*=======  Font size'ı 30px yapın*/
   font-size: 30px;
 }
-p{
+
+/*======= Sayfadaki TÜM p tag'leri için aşağıdaki özellikleri içeren bir selector yaratın:
+
 font-size: 16px;
-  font-family: roboto;
-  padding: 10px;
-  line-height: 1.4;
+font-family: roboto;
+padding: 10px;
+line-height: 1.4;
+
+*/
+p{
+  font-size: 16px;
+    font-family: roboto;
+    padding: 10px;
+    line-height: 1.4;
+    margin: 0px;
 }
 
 
@@ -124,6 +44,15 @@ font-size: 16px;
   border-radius: 10px;
 
 */
+img{
+  border-radius: 20px;
+  width: 100%;
+}
+
+.grey_background{
+  background: rgb(190, 187, 187);
+  padding: 30px 80px;
+}
 
 .content-row {
   display: flex;
@@ -136,6 +65,12 @@ font-size: 16px;
 .container {
   /*======= width property yaratın. Değerini 605px olarak atayın */
   margin: 0 auto;
+  width: 800px;
+}
+
+.ortalama{
+  width: 45%;
+  display: inline-block;
 }
 
 .container header nav a {
@@ -147,20 +82,26 @@ font-size: 16px;
   color: white;
   text-decoration: none;
   margin-bottom: 20px;
+  background: #E79947;
    /*======= background property yaratın. Değerini #E79947 olarak atayınız.*/
   
 }
 
 .container header nav a:hover {
 /*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini yapın. */
+background: white;
+color: aqua;
 }
 
 /*======= Hakkmızda bölümü için aşağıdaki stilleri içeren bir selector yaratın:
   margin-top: 20px;
 */
+.hakkimizda{
+  margin-top: 20px;
+}
 
 .contact-section {
-  border-top: 1px dashed black;
+  border-bottom: 1px dashed white;
   padding: 20px 0;
 }
 
@@ -169,9 +110,25 @@ font-size: 16px;
   margin: 0 0 10px 0;
 }
 
+.aperatif_jpeg {
+  width: 80%;
+  margin: 0 auto;
+  display: block;
+}
+
+
 /*======= contact-section class'da address tag'i için aşağdıaki stilleri içeren bir selector yaratın:
    line-height: 2;
+  
 */
+.contact-section address {
+  line-height: 2;
+  
+  
+  
+  
+}
+
 
 footer {
   width: 100%;
@@ -182,7 +139,7 @@ footer {
 footer .footer-content { 
   margin: 0 auto; 
   /*======= width property yaratın. Değerini 605px olarak atayın */
-  
+  width: 750px;
 }
 
 footer .footer-content h3 {
@@ -199,6 +156,11 @@ footer nav {
   color: black;
   text-decoration: underline;
 */
+footer a{
+  margin: 10px;
+    color: black;
+    text-decoration: underline;
+}
 
 
 footer nav a:first-child {
@@ -208,8 +170,12 @@ footer nav a:first-child {
 /*======= Footer nav'daki anchor tag için aşağıdaki stilleri içeren bir hover state yaratın:
   color: white;
 */
+footer nav a:hover{
+  color: white;
+}
 
 footer .footer-content .copyright {
   padding: 20px 0;
    /*======= metni ortalayacak kodu yazın */
+   text-align: center;
 }
